@@ -3,3 +3,24 @@ html2image
 [html2image] - source code of html2image library
 
 [htmlgenerator] - small tool converting html to image
+
+How To
+==========
+java -Djava.ext.dirs=<Path> <Class> <HTML>
+
+parameters:
+
+-Djava.ext.dirs - specify the library path (where the html2iamge is located)
+<Class> - the main class name
+<HTML> - HTML file name
+
+
+Output:
+
+the only output file is output.png.
+
+
+Sample:
+
+java -Djava.ext.dirs=. main trend.html
+
